--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "psr-4": {"SRCreative\\Ping\\": "src/"}
+            "psr-4": {"SRCreativePing\\": "src/"}
         }
     },
     "require": {
